--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{ 
-  "homepage": "https://DineshKumar1414.github.io/timesworld-task",
+{
   "name": "timesworld-react-task",
   "version": "0.1.0",
   "private": true,
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
   }
 }
